# pyfeflow

./: README.md  README_中文.md  gp_BAS.py  pyproject.toml  test.txt
darcyflux-z/: README.md  README_中文.md  ifmDarcyZ.py
docs/: 01_darcyflux.md  01_darcyflux_中文.md  02_drawdown.md  02_drawdown_中文.md  03_IfmMonteCarlo.md  03_IfmMonteCarlo_中文.md  04_monteCarlo_cache.md  04_monteCarlo_cache_中文.md  05_van_genuchten.md  05_van_genuchten_中文.md  06_tif2excel.md  06_tif2excel_中文.md  07_BAS_algorithm.md  07_BAS_algorithm_中文.md
drawdown/: README.md  README_中文.md  ifmDrawdown.py
mc/: IfmMonteCarlo.py  README.md  README_中文.md
mc-cache/: README.md  README_中文.md  monteCarlo_cache.py
mcmc/: .gitignore  BMA_RandomField.py  BMA_algorithm.py  README.md  result_plot.py
mcmc/lib/: Mc_module.py  RandomField.py  Voronoi_tessellation.py  __init__.py
optimization/: BAS_algorithm.py  README.md  README_中文.md
pyfeflow/: __init__.py  drawdown.py  monteCarlo.py  optimitor.py  tif2excel.py  van_genuchten.py
pyfeflow/optimitor/: bas_algorithm.py
tif-to-excel/: README.md  README_中文.md  tif2excel.py
water-retention-curve/: README.md  README_中文.md  van_genuchten.py
